# FlowEmu

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile_debug  Dockerfile_ml  Pipfile  README.md  run.py  start.sh  start_bridge.sh  start_bridge_native.sh  start_ml.sh
config/environments/bridge/: build.sh  cleanup.sh  config.sh  config.toml  setup.sh
config/environments/docker/: build.sh  cleanup.sh  config.sh  config.toml  setup.sh
config/environments/docker_debug/: build.sh  cleanup.sh  config.sh  config.toml  setup.sh
config/graphs/: fixed_interval.json
config/scripts/: buffer_size.py
config/testcases/: iperf.toml  ping.toml
config/traces/delay/: README.md  example
config/traces/loss/: README.md  example
config/traces/rate/: README.md
lib/python/: .gitignore  README.md  setup.cfg
lib/python/src/flowemu/: __init__.py  control.py
ml_models/: checkpoint  graph.data-00000-of-00001  graph.index  graph.pb
ml_python/: export.py  graph.py
server/: docker-compose.yml
server/config/: mosquitto.conf
src/: CMakeLists.txt  RawSocket.cpp  RawSocket.hpp  main.cpp
src/ml/: DeepQLearning.cpp  DeepQLearning.hpp
src/modules/: Module.hpp  ModuleManager.cpp  ModuleManager.hpp  Parameter.hpp  Path.hpp  Port.hpp  Statistic.hpp
src/modules/delay/: FixedDelayModule.cpp  FixedDelayModule.hpp  TraceDelayModule.cpp  TraceDelayModule.hpp
src/modules/loss/: GilbertElliotLossModule.cpp  GilbertElliotLossModule.hpp  TraceLossModule.cpp  TraceLossModule.hpp  UncorrelatedLossModule.cpp  UncorrelatedLossModule.hpp
src/modules/meter/: DelayMeter.cpp  DelayMeter.hpp  ThroughputMeter.cpp  ThroughputMeter.hpp
src/modules/null/: NullModule.cpp  NullModule.hpp
src/modules/queue/: CodelQueueModule.cpp  CodelQueueModule.hpp  DQLQueueModule.cpp  DQLQueueModule.hpp  FifoQueueModule.cpp  FifoQueueModule.hpp  Pi2QueueModule.cpp  Pi2QueueModule.hpp  PieQueueModule.cpp  PieQueueModule.hpp  RedQueueModule.cpp  RedQueueModule.hpp
src/modules/rate/: BitrateRateModule.cpp  BitrateRateModule.hpp  FixedIntervalRateModule.cpp  FixedIntervalRateModule.hpp  TraceRateModule.cpp  TraceRateModule.hpp
src/modules/socket/: RawSocket.cpp  RawSocket.hpp
src/utils/: Mqtt.cpp  Mqtt.hpp  Packet.cpp  Packet.hpp
tools/: control.py  control_plot.py  plot.py
webui/: index.html
webui/css/: reset.css  ui.css
webui/js/: slider.js
webui/js/mqtt/: mqtt.js  mqttjs.js
webui/js/node_editor/: node_editor.css  node_editor.js
webui/js/utils/: utils.js
