[metadata]
name = flowemu
version = git
author = Daniel Stolpmann
author_email = daniel.stolpmann@tuhh.de
description = Python library for interacting with FlowEmu
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
url = https://github.com/ComNetsHH/FlowEmu
project_urls =
    Bug Tracker = https://github.com/ComNetsHH/FlowEmu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    paho-mqtt

[options.packages.find]
where = src
